paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/preprocessing_directives/scope_of_macro_3/sample_002/target.compile.log
error[E0308]: mismatched types
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/preprocessing_directives/scope_of_macro_3/sample_002/target.rs:8:28
  |
8 |     let c: [[u8; 6]; 2] = [b"hello\0", b"\0\0\0\0\0\0"];
  |                            ^^^^^^^^^^ expected `[u8; 6]`, found `&[u8; 6]`
  |
help: consider dereferencing the borrow
  |
8 |     let c: [[u8; 6]; 2] = [*b"hello\0", b"\0\0\0\0\0\0"];
  |                            +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.